--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Home Page</title>
 	<link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="off-canvas-wrapper">
@@ -48,7 +49,7 @@
             <div class="cell small-12 large-12" style="background-color: white;">
                 <h2>
                     <center>
-                    <b>Andy Harnisch</b>
+                    <b><p class = "title">Welcome to Andy's Personal Website!</p></b>
                     </center>
                 </h2>
             </div>
@@ -58,11 +59,21 @@
                         <img src="images/HomePagePicture.png" width="300" height="300" style="float: left; 
                         margin: 5px;">
                     </div>
-                    <h4>Hey! I'm currently a senior majoring in Computer Science, with minors in Statistics and Philsosphy.
-                    I'm currently taking CISC 380 - Algorithims, CISC 350 - Web Development, STAT 400 - Data Mining & Machine Learning, and ASL 211 - Intermediate ASL 1
-                    My goals after college would probably to find a nice job at preferably a smaller comapany or stay at St. Thomas and get my masters in Business.
-                    I think I would want to stay in Minnesota after college as I enjoy playing hockey during the winter and skiing/snowboarding.
-                    </h4>
+                    <p class = "intro">
+                        In May of 2024 I gradauted from St. Thomas. <br>
+                        I majored in Computer Science with minors in Philosophy and Applied Statistics.
+
+                    </p>
+
+                    <p class = "about"><br> I'm currently working in IT at Plunkett's Pest Control during school and will be moving to full time once I graduate.
+                        In the future I want to work in cyber security or something similar to that. 
+                        I'm currently studying for the CompTIA Security+ Exam so that I have more experience in the cyber security field.
+                        I enjoy problem solving which is what got me interested in coding and let to me majoring in computer science.
+                        
+                        As of right now I plan to stay in Minnesota after college as I have a job in the cities.
+                        I enjoy playing hockey during the winter and skiing/snowboarding so if I didn't live in Minnesota I would want to live somewhere in the Rockies
+
+                    </p>
                 </div>
             </div>
             <div class="grid-x grid-padding-x"></div>
